fixed sub menu level 2 not showing

--- a/plugins/system/zo2/assets/zo2/development/less/admin.styles.less
+++ b/plugins/system/zo2/assets/zo2/development/less/admin.styles.less
@@ -576,9 +576,6 @@ body{
   .sortable-row,.sortable-col {
     border: none;
   }
-  .row-fluid {
-    overflow: hidden;
-  }
   .category-item label,.category-item input {
     margin-bottom: 0px;
     margin-top: 0px;
