--- a/templates/zo2_hallo_j25/assets/zo2/development/less/template.less
+++ b/templates/zo2_hallo_j25/assets/zo2/development/less/template.less
@@ -673,6 +673,7 @@ footer{
     a{
         background: none;
         padding: 10px 0;
+        display: block;
         &:hover,
             &:active,
             &:focus{
